--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h2 {
     overflow: hidden;
     margin: auto;
     background-color: #e4e4e4;
-    padding-bottom: 2em;
+    padding-bottom: 0.5em;
 }
 
 header,
@@ -61,8 +61,53 @@ footer {
     text-align: center;
 }
 
+footer {
+    padding: 0.25em;
+}
+
 #subheading {
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
     color: #0e264b;
+}
+
+@media all and (min-width: 415px) {
+    header,
+    footer {
+        background-color: #e4e4e4;
+    }
+
+    #photo {
+        display: block;
+        margin: auto;
+        width: 29%;
+        float: right;
+        background-color: #f2f2f2;
+    }
+
+    #resume-photo {
+        display: block;
+        margin: auto;
+        width: 100%;
+    }
+}
+
+@media all and (min-width: 769px) {
+    #statement,
+    #experience,
+    #education,
+    #skills,
+    #certifications {
+        width: 65%;
+    }
+
+    main {
+        background-color: #f2f2f2;
+    }
+
+    #resume-photo {
+        display: block;
+        margin: auto;
+        width: 100%;
+    }
 }
