--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,11 @@ section {
     background-color: #f2f2f2;
 }
 
+#name {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
 #resume-photo {
     display: block;
     margin: auto;
@@ -59,6 +64,7 @@ section {
 header,
 footer {
     text-align: center;
+    display: block;
 }
 
 footer {
@@ -69,6 +75,8 @@ footer {
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
     color: #0e264b;
+    padding-top: 0;
+    margin-top: 0;
 }
 
 @media all and (min-width: 415px) {
